# lingo-call

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
src/lingo_call/: __init__.py  config.py  conversation.py  pipeline.py
src/lingo_call/audio/: __init__.py  player.py  recorder.py
src/lingo_call/llm/: __init__.py  base.py  llama_cpp.py  transformers_llm.py
src/lingo_call/stt/: __init__.py  base.py  omnilingual.py
src/lingo_call/tts/: __init__.py  base.py  chatterbox.py  xtts.py
