[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingo-call"
version = "0.1.0"
description = "Multilingual voice conversation app with STT, LLM, and TTS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"  # chatterbox-tts requires numpy<1.26 which is incompatible with 3.13+
authors = [
    {name = "Lingo-Call Contributors"}
]
keywords = ["voice", "multilingual", "conversation", "stt", "tts", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sounddevice",
    "soundfile",
    "numpy",
    "pyyaml",
    "pynput",
]

[project.optional-dependencies]
# Full stack with all ML models
full = [
    "omnilingual-asr",
    "chatterbox-tts",
    "transformers>=4.40.0",
    "torch",
    "accelerate",
    "bitsandbytes",
]
# Individual components
stt = ["omnilingual-asr"]
tts = ["chatterbox-tts"]
llm = [
    "transformers>=4.40.0",
    "torch",
    "accelerate",
    "bitsandbytes",
]
# Development tools
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
lingo-call = "lingo_call.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lingo_call"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
